# DaVinci-CLI

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cfg.toml  test_emoji.txt  test_utf8.txt
src/: clipboard.rs  config.rs  d_cursor.rs  d_io.rs  editor.rs  highlighting.rs  lib.rs  main.rs  screens.rs  search.rs  status.rs  statusbar.rs
src/keybinds/: actions.rs  bindings.rs  manager.rs  mod.rs
src/modules/: clipboard.rs  cursor.rs  highlighting.rs  message_bar.rs  messagebar.rs  mod.rs  search.rs  status.rs  statusbar.rs
src/screens/: clipboard.rs  debug.rs  editor.rs  mod.rs  screens.rs
src/transput/: mod.rs  transput.rs
