[package]
name = "DaVinci-CLI"
version = "0.0.1-alpha"
edition = "2024"
build = "build.rs"

[dependencies]
crossterm = "0.21.0"
config = "0.15.11"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
cli-clipboard = "0.2.0"
once_cell = "1.19.0"

[build-dependencies]
embed-resource = "3.0.2"
